--- a/lbac.cabal
+++ b/lbac.cabal
@@ -16,4 +16,5 @@ executable lbac
   hs-source-dirs:      src
   main-is:             Main.hs
   default-language:    Haskell2010
-  build-depends:       base >= 4.7 && < 5
+  build-depends:       base >= 4.7 && < 5,
+                       QuickCheck
